--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gulp-mocha",
-  "version": "2.1.0",
+  "name": "@hoist/gulp-mocha",
+  "version": "2.1.1",
   "description": "Run Mocha tests",
   "license": "MIT",
-  "repository": "sindresorhus/gulp-mocha",
+  "repository": "hoist/gulp-mocha",
   "author": {
     "name": "Sindre Sorhus",
     "email": "sindresorhus@gmail.com",
